[package]
name = "rust-calc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youchoose = "0.1.1"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
chrono = "0.4.19"
anyhow = "1.0.44"
