[package]
name = "rust-calc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.21"
anyhow = "1.0.44"

[dependencies.cursive]
version = "0.16"
default-features = false
features = ["crossterm-backend"]
